irx class generation: Add support for custom parameter instructions and use it for plib